# CSchallenge

./: .gitignore  AUTHENTICATION_TROUBLESHOOTING.md  FIX_CLIENT_SECRET.md  JOB_MATCHER_SETUP.md  KEYCLOAK_FIX.md  README.md  docker-compose.yml  start-dev.ps1
Services/JobsService/job_matcher/: Dockerfile  INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.md  README.md  pyproject.toml  test_flow.py
Services/JobsService/job_matcher/src/job_matcher/: api.py  main.py
Services/JobsService/job_matcher/src/job_matcher/crews/Job_Matcher/: jobmatcher_crew.py
Services/JobsService/job_matcher/src/job_matcher/crews/Job_Matcher/config/: agents.yaml  tasks.yaml
Services/ai-resume-enhancer/: .env.example  API_REFERENCE.md  Dockerfile  ENHANCEMENT_API_IMPLEMENTATION.md  README.md  alembic.ini  check_ai_analysis.py  create_test_resume.py  docker-compose.yml  requirements.txt  test_complete_api.ps1  test_daily_limit.ps1  test_enhancement_api.py
Services/ai-resume-enhancer/app/: __init__.py  db_mongo.py  logging_config.py  main.py  schemas.py
Services/config-server/: pom.xml
Services/gateway/: Dockerfile  pom.xml
Services/user/: CHANGES_SUMMARY.txt  Dockerfile  SETUP.md  env.template  pom.xml
docs/: ERASER_DIAGRAM_PROMPT.md
frontend/: .env.local.example  README.md  SETUP_GUIDE.md  components.json  package-lock.json  package.json  tailwind.config.ts
frontend/lib/: http.ts
frontend/pages/: _app.tsx  dashboard.tsx  index.tsx  job-matcher.tsx
frontend/pages/auth/: signin.tsx
frontend/styles/: globals.css
frontend/types/: next-auth.d.ts
init-scripts/: 01-init-databases.sql
(+88 files in other folders)
